GNU bug report logs - #34894
Another solaris 10 ln issue on 8.31

Previous Next

Package: coreutils;

Reported by: John Marino <gnugcc <at> marino.st>

Date: Sun, 17 Mar 2019 14:36:01 UTC

Severity: normal

Tags: fixed

Done: Assaf Gordon <assafgordon <at> gmail.com>

Bug is archived. No further changes may be made.

To add a comment to this bug, you must first unarchive it, by sending
a message to control AT debbugs.gnu.org, with unarchive 34894 in the body.
You can then email your comments to 34894 AT debbugs.gnu.org in the normal way.

Toggle the display of automated, internal messages from the tracker.

View this report as an mbox folder, status mbox, maintainer mbox


Report forwarded to bug-coreutils <at> gnu.org:
bug#34894; Package coreutils. (Sun, 17 Mar 2019 14:36:01 GMT) Full text and rfc822 format available.

Acknowledgement sent to John Marino <gnugcc <at> marino.st>:
New bug report received and forwarded. Copy sent to bug-coreutils <at> gnu.org. (Sun, 17 Mar 2019 14:36:01 GMT) Full text and rfc822 format available.

Message #5 received at submit <at> debbugs.gnu.org (full text, mbox):

From: John Marino <gnugcc <at> marino.st>
To: bug-coreutils <at> gnu.org
Subject: Another solaris 10 ln issue on 8.31
Date: Sun, 17 Mar 2019 09:35:16 -0500
After applying the recent patch to 8.31 ln to fix functionality on 
solaris 10, I saw some improvement but I think there's something else wrong.

e.g. # ln -s /raven/etc/fonts/conf.avail/50-user.conf .
ln: failed to create symbolic link '.': Invalid argument

I'm sure commands like that worked with version 8.30.

Regards,
John




Information forwarded to bug-coreutils <at> gnu.org:
bug#34894; Package coreutils. (Sun, 17 Mar 2019 20:29:01 GMT) Full text and rfc822 format available.

Message #8 received at 34894 <at> debbugs.gnu.org (full text, mbox):

From: Paul Eggert <eggert <at> cs.ucla.edu>
To: John Marino <gnugcc <at> marino.st>, 34894 <at> debbugs.gnu.org
Subject: Re: bug#34894: Another solaris 10 ln issue on 8.31
Date: Sun, 17 Mar 2019 13:28:47 -0700
[Message part 1 (text/plain, inline)]
John Marino wrote:
> After applying the recent patch to 8.31 ln to fix functionality on solaris 10, I 
> saw some improvement but I think there's something else wrong.
> 
> e.g. # ln -s /raven/etc/fonts/conf.avail/50-user.conf .
> ln: failed to create symbolic link '.': Invalid argument

Thanks. Could you please try the attached patch, which I installed on master?

Also, please try running 'make check'. It should catch bugs like this.
[0001-ln-port-to-symlink-x-.-failing-with-EINVAL.patch (text/x-patch, attachment)]

Information forwarded to bug-coreutils <at> gnu.org:
bug#34894; Package coreutils. (Sun, 17 Mar 2019 21:18:01 GMT) Full text and rfc822 format available.

Message #11 received at 34894 <at> debbugs.gnu.org (full text, mbox):

From: John Marino <gnugcc <at> marino.st>
To: Paul Eggert <eggert <at> cs.ucla.edu>, 34894 <at> debbugs.gnu.org
Subject: Re: bug#34894: Another solaris 10 ln issue on 8.31
Date: Sun, 17 Mar 2019 16:17:42 -0500
[Message part 1 (text/plain, inline)]
On 3/17/2019 15:28, Paul Eggert wrote:
> John Marino wrote:
>> After applying the recent patch to 8.31 ln to fix functionality on
>> solaris 10, I saw some improvement but I think there's something else
>> wrong.
>>
>> e.g. # ln -s /raven/etc/fonts/conf.avail/50-user.conf .
>> ln: failed to create symbolic link '.': Invalid argument
>
> Thanks. Could you please try the attached patch, which I installed on
> master?
>
> Also, please try running 'make check'. It should catch bugs like this.

Okay, that seems to fix the regression on ln.
I ran the test in a limited environment, which is why many of the tests 
were skipped.  However, there was one failure with tee you should look 
at (attached).

============================================================================
Testsuite summary for GNU coreutils 8.31
============================================================================
# TOTAL: 616
# PASS:  405
# SKIP:  210
# XFAIL: 0
# FAIL:  1
# XPASS: 0
# ERROR: 0

Regards,
John

[tee-fail.txt (text/plain, attachment)]

Information forwarded to bug-coreutils <at> gnu.org:
bug#34894; Package coreutils. (Thu, 28 Mar 2019 18:05:02 GMT) Full text and rfc822 format available.

Message #14 received at 34894 <at> debbugs.gnu.org (full text, mbox):

From: Assaf Gordon <assafgordon <at> gmail.com>
To: John Marino <gnugcc <at> marino.st>, Paul Eggert <eggert <at> cs.ucla.edu>,
 34894 <at> debbugs.gnu.org
Subject: Re: bug#34894: Another solaris 10 ln issue on 8.31
Date: Thu, 28 Mar 2019 12:04:11 -0600
tags 34894 fixed
close 34894
stop

On 2019-03-17 3:17 p.m., John Marino wrote:
> On 3/17/2019 15:28, Paul Eggert wrote:
>> John Marino wrote:
>>> After applying the recent patch to 8.31 ln to fix functionality on
>>> solaris 10, I saw some improvement but I think there's something else
>>> wrong.
>>
>> Thanks. Could you please try the attached patch, which I installed on
>> master?

Installed here:
https://git.savannah.gnu.org/cgit/coreutils.git/commit/?id=3e0dff3925b5e521cae468087950e85b60002d1c

> Okay, that seems to fix the regression on ln.

Thanks for confirming, I'm closing this bug.

-assaf






Added tag(s) fixed. Request was from Assaf Gordon <assafgordon <at> gmail.com> to control <at> debbugs.gnu.org. (Thu, 28 Mar 2019 18:05:02 GMT) Full text and rfc822 format available.

bug closed, send any further explanations to 34894 <at> debbugs.gnu.org and John Marino <gnugcc <at> marino.st> Request was from Assaf Gordon <assafgordon <at> gmail.com> to control <at> debbugs.gnu.org. (Thu, 28 Mar 2019 18:05:02 GMT) Full text and rfc822 format available.

bug archived. Request was from Debbugs Internal Request <help-debbugs <at> gnu.org> to internal_control <at> debbugs.gnu.org. (Fri, 26 Apr 2019 11:24:06 GMT) Full text and rfc822 format available.

This bug report was last modified 5 years and 3 days ago.

Previous Next


GNU bug tracking system
Copyright (C) 1999 Darren O. Benham, 1997,2003 nCipher Corporation Ltd, 1994-97 Ian Jackson.